# music

./: .gitignore  README.rst  pyproject.toml  requirements.txt
music/: __main__.py  models.py  server.py  test_data.py
music/static/: kammo
music/templates/: base.html  home.html  player.html
tests/: test_music.py
